  (Thanks, The Code Distillery)
  [smcmahon]

- Add traversal hacks to block TTW reads of several text, template, tales and python
  attributes.
  (Thanks, The Code Distillery)
  [smcmahon]

- remove undesirable doc string from onSuccess.
  (Thanks, The Code Distillery)
  [smcmahon]

- Protect "member*" convenience methods from traversal TTW.
  (Thanks, The Code Distillery)
  [smcmahon]

1.7.8 2012-04-10
----------------

- Added zcml autoinclude. Looks like "Products" packages are no longer blessed.
  [smcmahon

1.7.7 2012-03-18
----------------

- Added inline js to fg_base_viewp3.cpt to disable Plone 4.3's non-kss
  inline validation for Archetypes. Note that this depends on a fix pushed
  to 4.3.x after 4.3rc1. Without that fix, inline validation will be
  attempted anyway; it's invisible except for log entries.
  [smcmahon]

- Fix incompatability of localtime formatting for datetime fields
  with Plone 4.3.
  [lewicki]

- types with spaces in their ids should work with quickedit
  [datakurre]

- fix problem where multiple rating scales on one page
  would all have the same title. Will have to re-create
  rating scale fields to fix existing.
  [vangheem]

- Add the calendar javascripts needed to display correctly
  the calendar widget in a portlet
  [sgeulette]

- add new ccOverride field
  [znbn]

- toolbar position is now fixed
  [vangheem]

- fix quickedit not working when using form as default view.
  [vangheem]

- use full name when getting a default to address
  of the form.
  [vangheem]

- add plone.belowcontenttitle viewlet
  [vangheem]

- Removed backwards compatibility. The 1.7 series requires Plone 4.1.
  [maurits]

- If an active action adapter is renamed, keep it active.
  [maurits]


1.7.6 2012-12-06
----------------

- 1.7.5 Accidentally reverted the "Do not explicitly set the MIME-Version" change
  from 1.7.3. Fixed. [smcmahon]

- Add field selection to save data adapter so that some fields can